Added nano header that loads no extra styles or scripts to improve compatibility with heavily styled components like the JS PDF reader.